Classes to retrieve fields in existing objects. JUnit Tests are added.